# disaster-severity-prediction

./: .gitignore  04-30 期末災害嚴重度預測專案：Kaggle 競賽、IEEE 報告與學術誠信要求總覽-Summary.md  README.md  pyproject.toml  requirements.txt  run_inference_pipeline.sh  run_leaky_repro.sh  submit_lean_v2.sh  test_new_features.py
data/: sample_submission.csv
docs/: 04-30 期末災害嚴重度預測專案：Kaggle 競賽、IEEE 報告與學術誠信要求總覽-Summary.md  DM_114_FinalProject.md  Deep Research Recommendations for disaster-severity-prediction.md  FEATURE_ENGINEERING_IMPLEMENTATION.md  README.md  blind_backtest_summary_20260521.md  current_state.json  drift_report_20260521.md  experiment_summary.md  feature_ablation_lgbm_lean_tail1095_20260523_results.md  group3_ar_gru_reproduction_20260521.md  improvement_plan.md  missingness_shift_experiments_20260523_commands.md  missingness_shift_experiments_20260523_summary.md  private_lb_submission_plan_2026-05-22.md  progress-check-2026-05-21-5min.marp.md  progress-check-2026-05-21-5min.marp.zh.md  progress-check-2026-05-21-zh.md  progress-check-2026-05-21.marp.md  progress-check-2026-05-21.md  progress-check-2026-05-21.zh.marp.md  team4_team20_upgrade_summary_20260522.md  validation_protocol.md
experiments/: README.md
report/: main.tex  reference.bib
scripts/: audit_feature_missingness.py  audit_submission_public_failure_distance.py  build_final_selection_matrix.py  build_minimax_gru_consensus.py  build_minimax_regret_gru_consensus.py  build_private_hedge_frontier.py  build_public_chase_variants.py  build_report_figures.py  build_risk_weighted_gru_consensus.py  check_current_state.py  (+15 more)
(+200 files in other folders)
