[project]
name = "disaster-severity-prediction"
version = "0.1.0"
description = "NYCU Data Mining 2026 Spring — Group 5 — Disaster Severity Prediction"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "kaggle>=1.6",
    "kagglehub>=0.3",
    "tqdm>=4.65",
]
